force-app/main/default/objects/Loan_Applicant__c/fields/Disbursal_CKYC_ID__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_CKYC_ID__c</fullName>
    <description>Used in DM/DA Module</description>
    <label>Disbursal CKYC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>