force-app/main/default/objects/Loan_Applicant__c/fields/Disbursal_CKYC_ID_Number_History__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_CKYC_ID_Number_History__c</fullName>
    <description>Used in DM/DA to check if CKYC number is change or not</description>
    <label>Disbursal CKYC ID Number History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>