force-app/main/default/objects/Loan_Applicant__c/fields/IsDedupeExecuted__c.field-meta.xml
<CustomField>
    <fullName>IsDedupeExecuted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDedupeExecuted</label>
    <type>Checkbox</type>
</CustomField>