force-app/main/default/objects/Loan_Applicant__c/fields/Relationship_to_main_Application__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_main_Application__c</fullName>
    <label>Relationship to main Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Son</fullName>
            </value>
            <value>
                <fullName>Blood relative</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Proprietor</fullName>
            </value>
            <value>
                <fullName>Chair Person</fullName>
            </value>
            <value>
                <fullName>Member of Society</fullName>
            </value>
            <value>
                <fullName>Group Concern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>